--- a/index.html
+++ b/index.html
@@ -107,60 +107,9 @@
         .popup-left, .popup-right {
             width: 45%;
         }
-
-        /* Plan vidéo */
-        #videoContainer {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            z-index: 1;
-            background: black;
-        }
-
-        #backgroundVideo {
-            width: 100%;
-            height: 100%;
-            border: none;
-        }
-
-        /* Sécuriser la pop-up avec un champ de mot de passe */
-        .password-container {
-            margin: 20px 0;
-        }
-
-        #passwordInput {
-            padding: 10px;
-            font-size: 16px;
-            width: 200px;
-            margin-bottom: 20px;
-        }
-
-        #accessButton {
-            padding: 10px 20px;
-            background-color: #4CAF50;
-            color: white;
-            font-size: 16px;
-            cursor: pointer;
-            border: none;
-            border-radius: 5px;
-        }
     </style>
 </head>
 <body>
-    <!-- Conteneur vidéo -->
-    <div id="videoContainer">
-        <iframe id="backgroundVideo" 
-            src="https://www.youtube.com/embed/videoseries?list=PLiVDPajlpFZUc05R7sdyKSLjNznlP4hIT&autoplay=1&mute=1" 
-            frameborder="0" 
-            allow="autoplay; encrypted-media; fullscreen; accelerometer; picture-in-picture" 
-            allowfullscreen>
-        </iframe>
-    </div>
-
-    <!-- Conteneur principal -->
     <div class="container">
         <button id="customizeButton" class="top-right">Personnaliser</button>
         <div class="wheels-container">
@@ -182,19 +131,8 @@
         </div>
     </div>
 
-    <!-- Popup de personnalisation protégée par un mot de passe -->
-    <div id="popup" class="popup hidden">
-        <div class="popup-content">
-            <h2>Entrez le mot de passe pour accéder à la personnalisation</h2>
-            <div class="password-container">
-                <input type="password" id="passwordInput" placeholder="Mot de passe">
-                <button id="accessButton">Accéder</button>
-            </div>
-        </div>
-    </div>
-
     <!-- Popup de personnalisation -->
-    <div id="popupContent" class="popup hidden">
+    <div id="popup" class="popup">
         <div class="popup-content">
             <h2>Personnalisez les cadeaux</h2>
             <div class="popup-section">
@@ -216,15 +154,6 @@
                     <label for="gift5_2">Cadeau 5 :</label><input type="text" id="gift5_2" value="1 an de Netflix 📺"><br>
                     <label for="gift6_2">Cadeau 6 :</label><input type="text" id="gift6_2" value="Serviette de plage 🏖️"><br>
                 </div>
-                <div class="popup-left">
-                    <h3>Roue 3</h3>
-                    <label for="gift1_3">Cadeau 1 :</label><input type="text" id="gift1_3" value="Casque audio sans fil (Bose) 🎵"><br>
-                    <label for="gift2_3">Cadeau 2 :</label><input type="text" id="gift2_3" value="Abonnement salle de sport 🏋️‍♀️"><br>
-                    <label for="gift3_3">Cadeau 3 :</label><input type="text" id="gift3_3" value="Carte cadeau 100 € 🎁"><br>
-                    <label for="gift4_3">Cadeau 4 :</label><input type="text" id="gift4_3" value="Airfryer 🍟"><br>
-                    <label for="gift5_3">Cadeau 5 :</label><input type="text" id="gift5_3" value="Équipement sportif 200 € ⚽"><br>
-                    <label for="gift6_3">Cadeau 6 :</label><input type="text" id="gift6_3" value="Vol en montgolfière 🎈"><br>
-                </div>
             </div>
             <button id="saveButton">Sauvegarder</button>
         </div>
@@ -232,9 +161,24 @@
 
     <script>
         const wheels = [
-            { canvasId: "wheelCanvas1", gifts: ["Bougie parfumée 🕯️", "Lunch avec Adeline 🍽️", "Training avec Pierre 🏋️", "Poster de Laura 🖼️", "Arriver à 10h demain 🛌", "Lunch expense 💳"] },
-            { canvasId: "wheelCanvas2", gifts: ["Machine à café ☕", "Airpods 🎧", "Figurine de Laura 🧸", "Massage de 1h 💆‍♀️", "1 an de Netflix 📺", "Serviette de plage 🏖️"] },
-            { canvasId: "wheelCanvas3", gifts: ["Casque audio sans fil (Bose) 🎵", "Abonnement salle de sport 🏋️‍♀️", "Carte cadeau 100 € 🎁", "Airfryer 🍟", "Équipement sportif 200 € ⚽", "Vol en montgolfière 🎈"] }
+            {
+                canvasId: "wheelCanvas1",
+                gifts: ["Bougie parfumée 🕯️", "Lunch avec Adeline 🍽️", "Training avec Pierre 🏋️", "Poster de Laura 🖼️", "Arriver à 10h demain 🛌", "Lunch expense 💳"],
+                resultId: "result1",
+                spinButtonId: "spinButton1",
+            },
+            {
+                canvasId: "wheelCanvas2",
+                gifts: ["Machine à café ☕", "Airpods 🎧", "Figurine de Laura 🧸", "Massage de 1h 💆‍♀️", "1 an de Netflix 📺", "Serviette de plage 🏖️"],
+                resultId: "result2",
+                spinButtonId: "spinButton2",
+            },
+            {
+                canvasId: "wheelCanvas3",
+                gifts: ["Casque audio sans fil (Bose) 🎵", "Abonnement salle de sport 🏋️‍♀️", "Carte cadeau 100 € 🎁", "Airfryer 🍟", "Équipement sportif 200 € ⚽", "Vol en montgolfière 🎈"],
+                resultId: "result3",
+                spinButtonId: "spinButton3",
+            },
         ];
 
         function drawWheel(canvasId, colors, gifts) {
@@ -245,7 +189,6 @@
 
             ctx.clearRect(0, 0, canvas.width, canvas.height);
 
-            // Dessin des segments
             gifts.forEach((gift, i) => {
                 const angle = i * arc;
                 ctx.beginPath();
@@ -259,22 +202,58 @@
                 ctx.rotate(angle + arc / 2);
                 ctx.fillStyle = "black";
                 ctx.textAlign = "center";
-                ctx.font = "14px Arial";
-                ctx.fillText(gift, 100, 10);
+                ctx.font = "10px Arial"; // Réduction de la taille de la police
+                ctx.fillText(gift, 90, 10);
                 ctx.restore();
             });
 
-            // Dessin du centre blanc
             ctx.beginPath();
             ctx.arc(150, 150, 30, 0, 2 * Math.PI);
             ctx.fillStyle = "#ffffff";
             ctx.fill();
         }
 
-        // Initialisation des roues avec les cadeaux par défaut
+        function spinWheel(wheel) {
+            const canvas = document.getElementById(wheel.canvasId);
+            const ctx = canvas.getContext("2d");
+            const gifts = wheel.gifts;
+
+            let angle = 0;
+            const spinTime = Math.random() * 3000 + 2000;
+            const spinInterval = 20;
+
+            const interval = setInterval(() => {
+                angle += 0.1; // Rotation fluide
+                drawWheel(wheel.canvasId, ["#F0E68C", "#D1E8E2"], gifts);
+                ctx.translate(150, 150);
+                ctx.rotate(angle);
+                ctx.translate(-150, -150);
+            }, spinInterval);
+
+            setTimeout(() => {
+                clearInterval(interval);
+                const resultIndex = Math.floor(Math.random() * gifts.length);
+                document.getElementById(wheel.resultId).textContent = `Résultat: ${gifts[resultIndex]}`;
+            }, spinTime);
+        }
+
+        document.getElementById("customizeButton").addEventListener("click", () => {
+            document.getElementById("popup").style.display = "flex";
+        });
+
+        document.getElementById("saveButton").addEventListener("click", () => {
+            wheels.forEach((wheel, i) => {
+                wheel.gifts = Array.from(document.querySelectorAll(`#popup input[id^=gift${i + 1}_]`)).map(input => input.value);
+                drawWheel(wheel.canvasId, ["#F0E68C", "#D1E8E2"], wheel.gifts);
+            });
+            document.getElementById("popup").style.display = "none";
+        });
+
         wheels.forEach(wheel => {
             drawWheel(wheel.canvasId, ["#F0E68C", "#D1E8E2"], wheel.gifts);
+            document.getElementById(wheel.spinButtonId).addEventListener("click", () => spinWheel(wheel));
         });
     </script>
 </body>
 </html>
+
