--- a/index.html
+++ b/index.html
@@ -243,10 +243,10 @@
 
             let angle = 0;
             const spinTime = Math.random() * 3000 + 2000;
-            const spinInterval = 20;
+            const spinInterval = 40; // Ralentissement de 50%
 
             const interval = setInterval(() => {
-                angle += 0.1; // Rotation fluide
+                angle += 0.05; // Rotation plus lente
                 drawWheel(wheel.canvasId, ["#F0E68C", "#D1E8E2"], gifts);
                 ctx.translate(150, 150);
                 ctx.rotate(angle);
@@ -266,7 +266,10 @@
 
         document.getElementById("saveButton").addEventListener("click", () => {
             wheels.forEach((wheel, i) => {
-                wheel.gifts = Array.from(document.querySelectorAll(`#popup input[id^=gift${i + 1}_]`)).map(input => input.value);
+                const inputs = document.querySelectorAll(`#popup input[id^=gift${i + 1}_]`);
+                if (inputs.length === 6) {
+                    wheel.gifts = Array.from(inputs).map(input => input.value);
+                }
                 drawWheel(wheel.canvasId, ["#F0E68C", "#D1E8E2"], wheel.gifts);
             });
             document.getElementById("popup").style.display = "none";
